--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-html {
-    margin: 0%;
-    height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -9,27 +12,83 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    font-family: 'Lato', sans-serif;
+    line-height: 1.6;
 }
 
-.container {
-    margin-right: auto;
-    margin-left: auto;
-    width: 1024px;
+ul {
+    list-style-type: none;
 }
 
-header {
-    height: 118px;
-    text-align: center;
+a {
+    text-decoration: none;
+    color: #ffffff;
 }
 
-nav {
-    background-color: rgba(0, 0, 0, 0.384);
-    text-align: center;
+h1, h2 {
+    font-weight: 100;
+    line-height: 1.2;
+    margin: 10px 0;
+    text-shadow: 2px 2px red;
+}
+
+p {
+    margin: 10px 0;
+    text-shadow: 2px 2px red;
+}
+
+navbar {
+    background-color: rgb(49, 28, 28);
     padding-top: 10px;
     padding-bottom: 10px;
+    width: 1024px;
+    }
+
+.navbar ul {
+    display: flex;
+    padding-top: 6%;
 }
 
-nav a {
+.navbar a {
+    padding: 10px;
+    margin: 0 5px;
+}
+
+.navbar a:hover {
+    border-bottom: 2px white solid;
+}
+
+.navbar .flex {
+    justify-content: center;
+}    
+     
+.container {
+    max-width: 1100px;
+    margin: 0 auto ;
+    overflow: auto;
+    padding: 0 40px;
+}
+
+.flex {
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+}
+
+@media (max-width: 1125px) {
+    .grid,
+    .container .grid,
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+
+    header {
+    height: 118px;
+    text-align: center;
+    }
+
+    
+
+    nav a {
     text-decoration: none;
     font-size: 17px;
     font-style: italic;
@@ -39,40 +98,23 @@ nav a {
     padding-right: 15px;
     border-bottom: 1px solid transparent;
     transition: border-bottom 0.5s;
-}
+    }
 
-main {
+    main {
     height: 420px;
     text-align: center;
     padding-top: 10px;
     padding-right: 120px;
     padding-left: 120px;
-}
+    }
 
-section {
+    section {
     height: 350px;
     text-align: center;
     padding-left: 380px;
+    } 
 }
 
-h1 {
-    font-size: 64px;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-
-p {
-    font-size: 24px;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-
-.fontstyle {
-    text-shadow: 2px 2px red;
-}
-/* style and animate this button */
 button {
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
@@ -89,12 +131,7 @@ button {
   button:hover {
     background: #f8ab04;
     text-decoration: none;
-  }
-
-.serviceContainer {
-    background-color: white;
-    width: 100%;
-}  
+  } 
 
 footer {
     background-color: rgba(0, 0, 0, 0.63);
@@ -106,4 +143,44 @@ footer {
 footer p {
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromTop {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
